<resources>
    <string-array name="typeAnimal">
        <item>Cat</item>
        <item>Dog</item>
        <item>Bird</item>
        <item>Fish</item>
        <item>Hamster</item>
    </string-array>
    <string name="app_name">Animals Database</string>
    <string name="add_animal">Add Animal</string>
    <string name="empty">Empty</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="save">Save</string>
    <string name="sorting_order">Sorting order</string>
    <string name="sorting_text">Sort order of the list of animals</string>
    <string name="database_type">Database type</string>
    <string name="datebase_text">Database implementation in the application</string>
    <string name="select_sort_order">Select sort order</string>
    <string name="select_implementation_db">Select implementation of database</string>
</resources>