<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/NavigationToolbar"
        app:title="@string/add_animal" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        style="@style/AddAnimalInputLayout"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                style="@style/AddAnimalNameEditText"
                android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_input"
        style="@style/AddAnimalInputLayout"
        android:hint="@string/age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_edit"
            style="@style/AddAnimalAgeEditText"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="4">

        <Spinner
            android:id="@+id/type_spiner"
            style="@style/AddAnimalSpiner"
            android:entries="@array/typeAnimal"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/breed_input"
            style="@style/AddAnimalInputLayout"
            android:layout_marginTop="0dp"
            android:layout_width="0dp"
            android:hint="@string/breed"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/breed_edit"
                style="@style/AddAnimalNameEditText"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="20dp"
        android:textSize="16sp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:enabled="false"
        tools:enabled="true"
        android:backgroundTint="@color/blueG"/>
</LinearLayout>